add show, edit and delete routes to articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
 <h1>Articles Show Page</h1>
 <p><%= @article.title %></p>
 <p><%= @article.description %></p>
+
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure you want to delete this article?"} %> |
+<%= link_to 'Return to article listing', articles_path %>
