add helper methods and partial to keep it DRY

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -20,5 +20,6 @@
   </tbody>
 </table>
 <p>
-<%= link_to 'Create a new article', new_article_path %>
+<%= link_to 'Create a new article', new_article_path %> |
+<%= link_to 'Return to Home Page', root_path %>
 </p>
