--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,27 +1,4 @@
-<h1>New Article</h1>
-
-<% if @article.errors.any? %>
-<h2>The following errors prevented the articles from being saved</h2>
-<ul>
-  <% @article.errors.full_messages.each do |msg| %>
-  <li><%= msg %></li> 
-<% end %>
-</ul>
-<% end %>
-
-<%= form_with scope: :article, url: articles_path, local: true do |f|  %>
-<p>
-  <%= f.label :title %><br/>
-  <%= f.text_field :title %>
-</p>
-<p>
-  <%= f.label :description %><br/>
-  <%= f.text_area :description %>
-</p>
-<p>
-  <%= f.submit %>
-</p>
-
-<% end %>
+<h1>Create a New Article</h1>
+<%= render 'form' %>
 
 <%= link_to 'Return to article listing', articles_path %>
